k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visitor-counter-service
  labels:
    app: visitor-counter
spec:
  selector:
    app: visitor-counter
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
